--- a/style.css
+++ b/style.css
@@ -47,7 +47,6 @@
   flex-direction: row;
   background-color: black;
   margin-right: 103px;
-  cursor: pointer;
 }
 .arrow-image-style {
   width: 8px;
@@ -279,6 +278,9 @@
     top: 177px;
     width: 500px;
     left: 140px;
+  }
+  .box-style {
+    cursor: pointer;
   }
   .box-style:hover .loc-button {
     background-color: #d5966c;
