--- a/styles.css
+++ b/styles.css
@@ -8,26 +8,32 @@
 .container-backtohome-style {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 .map-home-style {
   display: flex;
   flex-direction: row;
+  align-self: flex-start;
   background-color: black;
-  gap: 35px;
-  width: 208px;
   transform: translateY(72px);
-  cursor: pointer;
+  margin-left: 7px;
+  width: 264px;
 }
 .arrow-two-style {
   background-color: #d5966c;
+  padding: 24px;
+  width: 56px;
+  height: 72px;
+}
+.back-style {
+  display: flex;
+  align-items: center;
+  width: 208px;
   padding: 24px;
 }
 .backtohome-style {
   color: white;
   display: flex;
   align-items: center;
-  margin-left: -19px;
   font-size: 20px;
 }
 .our-location-two-style {
@@ -141,11 +147,17 @@
   .map-desktop {
     display: block;
   }
-  .map-home-style {
-    margin-left: 156px;
-  }
   .map-two-style {
     display: none;
+  }
+  .map-home-style {
+    cursor: pointer;
+  }
+  .map-home-style:hover .arr-button {
+    background-color: #151515;
+  }
+  .map-home-style:hover .back-button {
+    background-color: #d5966c;
   }
   .modern-two-style {
     font-size: 25px;
